fixed scrolling on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -8,3 +8,9 @@ body {
 }
 
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap');
+
+@media only screen and (max-width: 768px) {
+  body {
+    overflow: auto;
+  }
+}
